test/should-fail/vsgc2278Sub.visage
/**
 * @subtest vsgc2278.visage
 */

package class vsgc2278Sub {
  public var x;
  protected function y() {};
}
